xdg-shell: ack_configure with unmapped surface
The discussion in !188 (closed) hasn't settled, opening an issue to track it.
- Start with a fully initialized mapped toplevel
- Compositor sends
configure
- Client sends
ack_configure
, followed byattach(NULL)
andcommit
(Alternatively, replace step 3 with: attach(NULL)
, commit
, ack_configure
, commit
.)
wlroots refuses this ack_configure
, but other compositors ignore it. The rationale is that the ack_configure
is nonsensical.